// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`blogPost > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`blogPost > renders with author correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with authors correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-slot="root" class="inline-flex flex-row-reverse justify-end">
        <!--v-if--><button type="button" data-slot="base" class="ring-background rounded-full relative first:me-0 ring-2 -me-1.5"><span data-slot="root" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base"><img src="https://github.com/atinux.png" alt="atinux" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span></button><button type="button" data-slot="base" class="ring-background rounded-full relative first:me-0 ring-2 -me-1.5"><span data-slot="root" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span></button>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with authors slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">Authors slot</div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with badge correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with badge object correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 bg-primary/10 color-primary ring ring-inset ring-primary/25 px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with badge slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2">Badge slot<time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time></div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with body slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">Body slot</div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with class correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary absolute"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with date correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2">
      <!--v-if--><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with date slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Date slot</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with description correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with description slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description slot</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with footer slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <div data-slot="footer" class="">Footer slot</div>
</article>"
`;

exports[`blogPost > renders with header slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none">Header slot</div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with image correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with orientation horizontal correctly 1`] = `
"<article data-orientation="horizontal" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden gap-x-8 lg:grid lg:grid-cols-2 lg:items-center bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col justify-center p-4 sm:p-6 lg:px-0">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with orientation vertical correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with title correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring">
  <!--v-if-->
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with title slot correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title slot" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title slot</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with to & image correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Post link" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with to correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Post link" class="inset-0 absolute focus:outline-none"></a>
  <!--v-if-->
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with ui correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with variant ghost correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none shadow-lg rounded-lg group-hover/blog-post:shadow-none transition-[box-shadow,border-radius] ease-out group-hover/blog-post:rounded-b-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with variant naked correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col p-0 sm:p-0 outline-primary/25 has-[>a:focus-visible]:outline-3 transition"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none shadow-lg rounded-lg"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with variant outline correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-toned">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-muted">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with variant soft correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background-elevated/50 outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-muted">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-toned">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;

exports[`blogPost > renders with variant subtle correctly 1`] = `
"<article data-orientation="vertical" data-slot="root" class="relative group/blog-post flex flex-col rounded-lg overflow-hidden flex flex-col bg-background-elevated/50 ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated hover:ring-ring-accented has-[>a:focus-visible]:ring-primary"><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="inset-0 absolute focus:outline-none"></a>
  <div data-slot="header" class="relative overflow-hidden aspect-[16/9] w-full pointer-events-none"><img src="https://picsum.photos/640/360" alt="Title" data-slot="image" class="object-cover object-top w-full h-full transform transition-transform ease-out group-hover/blog-post:scale-110 motion-reduce:transition-none"></div>
  <div data-slot="body" class="min-w-0 flex-1 flex flex-col p-4 sm:p-6">
    <div data-slot="meta" class="flex items-center gap-2 mb-2"><span data-slot="badge" class="font-500 inline-flex items-center text-xs rounded-md gap-1 ring ring-inset ring-ring-accented color-text bg-background-elevated px-2 py-1"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
      <!--v-if--></span><time datetime="2024-01-01T00:00:00.000Z" data-slot="date" class="text-sm color-text-muted">Jan 1, 2024</time>
    </div>
    <h2 data-slot="title" class="text-xl text-pretty font-600 color-text-highlighted">Title</h2>
    <div data-slot="description" class="mt-1 text-base text-pretty color-text-toned">Description</div>
    <div data-slot="authors" class="pt-4 mt-auto flex flex-wrap gap-x-3 gap-y-1.5">
      <div data-orientation="horizontal" data-slot="root" class="relative group/user flex items-center gap-2"><span data-slot="avatar" class="inline-flex items-center justify-center shrink-0 select-none rounded-full align-middle bg-background-elevated size-8 text-base shrink-0"><img src="https://github.com/praburangki.png" alt="benjamincanac" width="32" height="32" data-slot="image" class="h-full w-full rounded-inherit object-cover"></span>
        <div data-slot="wrapper" class="">
          <!--v-if-->
          <p data-slot="name" class="font-500 color-text-highlighted text-sm">praburangki</p>
          <p data-slot="description" class="color-text-muted text-xs">benjamincanac</p>
        </div>
      </div>
    </div>
  </div>
  <!--v-if-->
</article>"
`;
